# claude-harness

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  cli.py  pyproject.toml  tui.py
.planning/: handoff.md  plan-v2.md  plan.md  spec-v2.md  spec-v3.md  spec.md
firecracker/: .gitignore  Makefile  demo.py  lima.yaml
firecracker/rootfs/: build-rootfs.sh
firecracker/snapshot/: bake-snapshot.py
guest-agent/: Cargo.toml
guest-agent/src/: main.rs
sandbox/: Dockerfile
src/: agent.py  api.py  backend.py  compaction.py  config.py  firecracker.py  permissions.py  pool.py  sandbox.py  sessions.py  tools.py
tests/: test_agent.py  test_api.py  test_compaction.py  test_firecracker.py  test_permissions.py  test_pool.py  test_sandbox.py  test_tools.py
