[project]
name = "claude-harness"
version = "0.1.0"
description = "A harness for running Claude-powered agents"
requires-python = ">=3.11"
dependencies = [
    "anthropic",
    "fastapi",
    "uvicorn[standard]",
    "docker",
    "sse-starlette",
    "python-multipart",
    "pydantic-settings",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
markers = ["integration: requires Docker and/or API keys"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]
