[package]
name = "guest-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "net", "io-util", "process", "fs", "macros"] }
base64 = "0.22"

[target.'cfg(target_os = "linux")'.dependencies]
tokio-vsock = "0.5"
libc = "0.2"

[profile.release]
opt-level = "s"
lto = true
strip = true
panic = "abort"
codegen-units = 1
